sfSandBoxCode/force-app/main/default/objects/Opportunity_Stage_Timelines__c/Opportunity_Stage_Timelines__c.object-meta.xml
<CustomObject>
    <description>Contain deadlines for opportunity stages</description>
    <label>Opportunity Stage Timeline</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Timelines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Stage Timelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>