sfSandBoxCode/force-app/main/default/objects/Opportunity_Stage_Timelines__c/fields/Expected_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Launch_Date__c</fullName>
    <label>Expected Launch Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>