sfSandBoxCode/force-app/main/default/objects/Opportunity_Stage_Timelines__c/fields/Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Next_Stage__c</fullName>
    <label>Next Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>