sfSandBoxCode/force-app/main/default/objects/Opportunity_Stage_Timelines__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Current_Stage__c</columns>
    <columns>Next_Stage__c</columns>
    <columns>Days__c</columns>
    <columns>Expected_Launch_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>